# SpotTheDifference

./: CMakeLists.txt  README.md  main.cpp
lib/cimg/: CImg.h
lib/include/: GameController.h  GameStage.h  imageClass.h  pixelClass.h
lib/src/: GameController.cpp  imageClass.cpp  pixelClass.cpp
